# ccb-db-ufd

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  Тест_with_result.xlsx  Тест_with_result_full.xlsx
demo/: attr.csv  columns.json  model.py  objects.json  streamlit_demo.py  tasks.json
notebooks/: training.ipynb
